--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "connect-busboy": "0.0.2",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "md5-file": "^3.1.1"
   }
